@@ -12,6 +12,11 @@
     <string name="privacy">Privacy</string>
     <string name="allow_analytics_title">Send crash logs</string>
     <string name="allow_analytics_description">Allow the app to send anonymous usage statistics and crash logs to the developer to help improve the app.</string>
+    <string name="quick_copy">Quick Copy</string>
+    <string name="quick_copy_title">Quick Number Copy</string>
+    <string name="quick_copy_description">Hold bolded numbers to copy them to the clipboard.</string>
+    <string name="quick_copy_keep_formatting_title">Copy Number Formatting</string>
+    <string name="quick_copy_keep_formatting_description">Keep the number formatting when copying numbers.</string>
 
     <!-- Action bar items -->
     <string name="action_bar_item_title_delete">Delete</string>
