@@ -13,6 +13,24 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:title="@string/quick_copy">
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="quickCopy"
+            android:summary="@string/quick_copy_description"
+            android:title="@string/quick_copy_title"/>
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="quickCopyKeepFormatting"
+            android:dependency="quickCopy"
+            android:summary="@string/quick_copy_keep_formatting_description"
+            android:title="@string/quick_copy_keep_formatting_title"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/privacy">
 
         <CheckBoxPreference
